tests/fixtures/invalid/set_bitxor_bool.py
# Cannot bitwise XOR Set[int] and Bool
x: set[int] = {1, 2, 3} ^ True
